# pann-training

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
scripts/: env_setting.sh  main.sh  step1_train.sh  step2_evaluate.sh  step3_extract_hidden.sh
src/: dataset.py  evaluate.py  extract_hidden.py  model.py  train.py
