[tool.poetry]
name = "pann-training"
version = "0.1.0"
description = "Process-Additive Neural Network (PANN): physics-partitioned SCM bias correction"
authors = ["Yuiko Ichikawa"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

numpy      = ">=1.26,<2"
torch      = ">=2.0"
PyYAML     = ">=6.0"
xarray     = ">=2024.1"
netCDF4    = "*"
matplotlib = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
